# BBB

./: .coverage  .env.example  .env.production.example  .gitignore  35_AUTOMATED_BUSINESS_MODELS.md  ALL_7_BUSINESSES_DEPLOYMENT.md  APEX_COMMAND_STRUCTURE.md  AUTONOMOUS_BUSINESS_ARCHITECTURE_10YEAR.md  AUTONOMOUS_SYSTEM_COMPLETE_GUIDE.md  BBB_COMPLETE_PLATFORM_VISUAL.html  BBB_TURNKEY_PRICING.md  CLAUDE.md  CNAME  COMPETITIVE_FEATURES_IMPLEMENTATION_SUMMARY.md  CORPORATION_OF_LIGHT_SUMMARY.md  CREATE_WORKOFARTTATTOO_BBB_REPO.html  DEPLOYMENT_SUMMARY.txt  DEPLOY_AUTONOMOUS_BUSINESS.sh  DEPLOY_NOW.html  Dockerfile  ECH0_BBB_TASK.txt  ECH0_BBB_TASK_FINAL.txt  ECH0_PRIME_TESTING.md  EXPERT_SYSTEM_ARCHITECTURE.md  EXPERT_SYSTEM_BUSINESS_PLAN.md  EXPERT_SYSTEM_README.md  FEATURES.md  FIVERR_AUTONOMOUS_SETUP.md  FIVERR_INTEGRATION_SUMMARY.md  LICENSE  LICENSING_SYSTEM.md  MAGIC_RD_LAB_COMMAND_STRUCTURE.md  MAGIC_RD_LAB_MARKETING.md  Makefile  OPERATIONAL_STATUS.md  PHASE_2_VISUAL_SUMMARY.html  PREMIUM_WORKFLOWS_PRICING.md  QUANTUM_OPTIMIZATION_COMPLETE.md  QUICK_DEPLOY_GUIDE.md  QUICK_START_VALIDATION.md  (+85 more)
.github/: CODEOWNERS
.jules/: bolt.md
FlowState/: Dockerfile  docker-compose.yml  kubernetes.yaml  requirements.txt
aios_screens/: 01_AIOSis_Desktop_Visualizer_Dashboard.html  02_AIOSis_Secure_VM_and_Red_Team_Control.html  03_AIOSis_Inventions_and_Patents_Database.html  04_AIOS_Innovations_Landing_Page.html  05_Qulab_InfiniteMaterials_Lab_Screen.html  06_InfiniteMaterials_Catalog_and_Database.html  07_Qulab_Discovery_Workflow_Visualizer.html  08_Quantum_Webhooks_and_Teleportation_Lab.html  09_Bayesian_Sophiarch__Monte_Carlo_Analytics.html  10_Mathematical_Alchemy_Synthesis_Engine.html  11_Materials_Research_404_Error_Page_1.html  12_Materials_Research_404_Error_Page_2.html  13_Materials_Research_404_Error_Page_3.html
alembic/: env.py  script.py.mako
backups/: backup_20251018_234154_0.backup  backup_20251018_234154_1.backup  backup_20251018_234154_2.backup  backup_20251018_234154_3.backup  backup_20251018_234154_4.backup  backup_20251018_234154_5.backup  backup_20251018_234154_6.backup  backup_20251018_234154_7.backup  backup_20251018_234154_8.backup  backup_20251018_234154_9.backup  backup_20251018_234232_0.backup  backup_20251018_234232_1.backup  backup_20251018_234233_0.backup  backup_20251018_234233_1.backup  backup_20251018_234233_2.backup  backup_20251018_234233_3.backup  backup_20251018_234233_4.backup  backup_20251018_234233_5.backup  backup_20251018_234233_6.backup  backup_20251018_234233_7.backup  backup_20251018_234233_8.backup  backup_20251018_234233_9.backup  backup_20251019_022828_0.backup  backup_20251019_022828_1.backup  backup_20251019_022828_2.backup  backup_20251019_022828_3.backup  backup_20251019_022828_4.backup  backup_20251019_022828_5.backup  backup_20251019_022828_6.backup  backup_20251019_022828_7.backup  backup_20251019_022828_8.backup  backup_20251019_022828_9.backup  backup_20251019_022829_0.backup  backup_20251019_022829_1.backup  backup_20251019_022830_0.backup  backup_20251019_023235_0.backup  backup_20251019_023235_1.backup  backup_20251019_023236_0.backup  backup_20251019_023236_1.backup  backup_20251019_023236_2.backup  (+205 more)
chief_enhancements_office/: example_demo.py  meta_agent.py  runner.py
chroma_db/: chroma.sqlite3
data/: bbb_unified_library.json  hive_knowledge_export.json  level8_deployment_plan.json  zero_touch_businesses.json
docs/: DOMAIN_AVAILABILITY_CHECK.html  FEATURE_REALITY_REPORT.md  IMPLEMENTATION_COMPLETE_SHOWCASE.html  PHASE_2_VISUAL_SUMMARY.html  TEST_REPORT.md  index.html  simulation_report.md
k8s/: README.md  configmap.yaml  deployment.yaml  echo-prime-debug-job.yaml  echo-prime.yaml  ingress.yaml  million-business-autoscaler.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml
(+318 files in other folders)
